feat: Added events